--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "elfinder": "^2.1.6",
-    "ace-builds": "https://github.com/ajaxorg/ace-builds.git#^1.2.3"
+    "ace-builds": "https://github.com/ajaxorg/ace-builds.git#^1.2.3",
+    "dropzone": "^4.3.0"
   }
 }
