--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "friendsofcake/crud-view": "dev-master",
         "cakedc/users": "^3.1",
         "friendsofcake/search": "^1.2",
-        "josegonzalez/cakephp-upload": "^3.4"
+        "josegonzalez/cakephp-upload": "^3.4",
+        "imagine/imagine": "^0.6.3"
     },
     "require-dev": {
         "psy/psysh": "@stable",
